file(GLOB UNIT_TESTS "${CMAKE_CURRENT_SOURCE_DIR}/tests/*.cpp")
foreach(testSrc ${UNIT_TESTS})
  get_filename_component(testName ${testSrc} NAME_WE)
  set(testName "${testName}")
  add_executable(${testName} ${testSrc})
  target_link_libraries(${testName} Signal Math)
  add_test(NAME ${testName} COMMAND ${testName} WORKING_DIRECTORY "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}")
  set_property(TARGET ${testName} PROPERTY FOLDER "Unit Tests")
  if(WIN32)
    set_property(TARGET ${testName} PROPERTY VS_DEBUGGER_WORKING_DIRECTORY $<TARGET_FILE_DIR:${testName}>)
  endif(WIN32)
endforeach(testSrc)